--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "console.image",
-  "version": "1.0.2",
-  "description": "A nice snippet to display images in chrome console",
-  "main": "dist/console.image.min.js",
+  "version": "2.0.0",
+  "description": "📸 Show an image in the DevTools console!",
+  "type": "commonjs",
+  "exports": {
+    ".": "./index.js",
+    "./auto": "./auto.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "clean-dist": "rimraf dist",
-    "prestart": "npm run clean-dist",
-    "build": "npm run prestart && webpack --env.prod"
+    "test": "vite"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/YannickDot/console.image.git"
-  },
+  "repository": "github:YannickDot/console.image",
   "keywords": [
     "console",
     "image",
@@ -22,17 +20,10 @@
   ],
   "author": "Yannick Spark <yannick.l.spark@gmail.com> (https://sparkyspace.com/)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/YannickDot/console.image/issues"
-  },
+  "bugs": "https://github.com/YannickDot/console.image/issues",
   "homepage": "https://github.com/YannickDot/console.image#readme",
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2016": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "rimraf": "^2.5.4",
-    "webpack": "^2.1.0-beta.26"
+    "vite": "^5.0.2",
+    "vite-plugin-commonjs": "^0.10.1"
   }
 }
